# Demo-Real-Time-Lighting

./: .gitmodules  CMakeLists.txt  README.md  config.cu  config.cuh  display.cu  main.cu  rt_program.cu  rt_program.cuh  rt_setup.cu  rt_setup.cuh
scene/: CMakeLists.txt  scene.cuh  scene_background.cu  scene_composite.cu  scene_demo.cu  scene_farm.cu  scene_id.cu  scene_simple.cu  scene_tutorial.cu
src/: CMakeLists.txt  Config.cpp  Config.h  Display.cpp  Display.h  Main.cpp  Model.h  ModelCuboid.cpp  ModelCuboid.h  ModelObj.cpp  ModelObj.h  RayTracerDevice.cu  RayTracerDevice.cuh  RayTracerHost.cpp  RayTracerHost.h  StbImpl.cpp  config.cpp  config.h  display.cpp  display.h  main.cpp  rt_program.cu  rt_setup.cpp  rt_setup.h
src/scene/: Scene.h  SceneBackground.cpp  SceneComposite.cpp  SceneCustomModel.cpp  SceneDemo.cpp  SceneFarm.cpp  SceneId.cpp  SceneSimple.cpp  SceneTutorial.cpp  scene_background.cpp  scene_composite.cpp  scene_demo.cpp  scene_farm.cpp  scene_id.cpp  scene_simple.cpp  scene_tutorial.cpp
